<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/baslaBTN"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/button_text"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/todoTitle"
        android:textColor="@color/text_color"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/subTitleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listTitle"
        android:textColor="@color/text_color"
        android:textSize="85sp"
        app:layout_constraintBottom_toTopOf="@+id/baslaBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="186dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />
</androidx.constraintlayout.widget.ConstraintLayout>